@@ -69,6 +69,8 @@ HEAD only (unreleased)
 
   Others
 
+    - TypesTool: Removed deprecated by_metatype argument of listContentTypes.
+
     - Some simplifications to the slurp_release release helper script and
       updates to the RELEASE.txt release instructions.
 
